[gd_scene load_steps=23 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/pointer.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kreon-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/HinaMincho-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/Kreon-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/SpecialElite-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Teko-Bold.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/fonts/Kreon-Light.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://characters/player/time.gd" type="Script" id=10]
[ext_resource path="res://other_menus/Controls.tscn" type="PackedScene" id=11]

[sub_resource type="CapsuleShape" id=1]
radius = 0.7
height = 4.85506

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.7, 0.1, 0.7 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.188235, 0.0509804, 0.0509804, 0.721569 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=17]
size = 20
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=18]
size = 30
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=19]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=22]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="GDScript" id=14]
script/source = "extends ProgressBar

# class member variables go here, for example:
# var a = 2
# var b = \"textvar\"

func _ready():
#	set_max(250)
	pass

func _process(_delta):
#	set_value(get_parent().throw_power)
	pass
"

[sub_resource type="Animation" id=21]
resource_name = "crouch"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Rotation_Helper:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 4.24498, 0 ), Vector3( 0, 1.99113, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BodyCollision:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ SubResource( 1 ), SubResource( 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BodyCollision:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 2.94042, 0 ), Vector3( 0, 1.38596, 6.79476e-08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BodyCollision:shape:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 4.85506, 1.59218 ]
}

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="BodyCollision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.94042, 0 )
shape = SubResource( 1 )

[node name="FeetCollision" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="Rotation_Helper" type="Spatial" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 4.24498, 0 )

[node name="InteractionRay" type="RayCast" parent="Rotation_Helper"]
transform = Transform( -2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, 0, 1.57021, 0 )
enabled = true
cast_to = Vector3( 0, 0, -7 )

[node name="look_at" type="Position3D" parent="Rotation_Helper"]
transform = Transform( -2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, 4.0552e-07, 1.58084, 4.6386 )

[node name="pickup_pos" type="Position3D" parent="Rotation_Helper"]
transform = Transform( -2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, -3.74712, 1.25278, 5.6584 )

[node name="Camera" type="Camera" parent="Rotation_Helper"]
transform = Transform( -2, 0, -1.74846e-07, 0, 2, 0, 1.74846e-07, 0, -2, 0, 1.66442, 0.0804269 )
current = true
fov = 90.0

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.49829
margin_bottom = 1.49829
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pointer" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -12.8
margin_top = -12.96
margin_right = 253.2
margin_bottom = 253.04
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraText" type="MarginContainer" parent="HUD"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -179.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/ExtraText"]
show_behind_parent = true
margin_right = 1280.0
margin_bottom = 179.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/ExtraText"]
margin_right = 1280.0
margin_bottom = 179.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="ExtraTextLabel" type="RichTextLabel" parent="HUD/ExtraText/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1270.0
margin_bottom = 169.0
custom_fonts/mono_font = SubResource( 17 )
custom_fonts/bold_italics_font = SubResource( 18 )
custom_fonts/italics_font = SubResource( 19 )
custom_fonts/bold_font = SubResource( 15 )
custom_fonts/normal_font = SubResource( 16 )
bbcode_enabled = true
bbcode_text = "[b][i][u]THE MORE INFORMATION BOX[/u][/i][/b]
[center]Since this is a prototype, many things are going to be incomplete so if you want to know more details about the game design or are just confused while playing, this box will hopefully help guide you. 
[/center][right][code][Q] show/hide more info box[/code][/right]
[b][u][i]MORE INFORMATION ABOUT THE MORE INFOMRATION BOX[/i][/u][/b]
It will automatically show whenever there is new information so if you want to be more immersed in the game and not see this box anymore, you can change "
text = "THE MORE INFORMATION BOX
Since this is a prototype, many things are going to be incomplete so if you want to know more details about the game design or are just confused while playing, this box will hopefully help guide you. 
[Q] show/hide more info box
MORE INFORMATION ABOUT THE MORE INFOMRATION BOX
It will automatically show whenever there is new information so if you want to be more immersed in the game and not see this box anymore, you can change "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSAndTime" type="MarginContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -171.0
margin_bottom = 51.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/FPSAndTime"]
show_behind_parent = true
margin_right = 171.0
margin_bottom = 65.0
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/FPSAndTime"]
margin_right = 171.0
margin_bottom = 65.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="fps and time" type="Label" parent="HUD/FPSAndTime/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 161.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 20 )
text = "Time Elapsed: 0:00
FPS: 60"
align = 2
valign = 1
autowrap = true
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="interaction_text" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.55
anchor_right = 0.5
anchor_bottom = 0.55
margin_left = -640.0
margin_top = -33.5
margin_right = 640.0
margin_bottom = 33.5
custom_fonts/font = SubResource( 22 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "interaction"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HUD"]
visible = false
margin_left = 26.0
margin_top = 22.0
margin_right = 378.0
margin_bottom = 51.0
max_value = 250.0
step = 2.0
script = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="message" type="Label" parent="HUD"]
visible = false
margin_left = 1065.73
margin_top = 27.8418
margin_right = 1156.73
margin_bottom = 41.8418
rect_scale = Vector2( 2, 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="HUD/message"]

[node name="Controls" parent="HUD" instance=ExtResource( 11 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 21 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_crouch_animation_finished"]
